--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  --line-color: #e5e7eb;
+}
+
 html.dark {
   --line-color: rgba(255, 255, 255, 0.2);
 }
